# Morelia

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pyup.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  fabfile.py  pavement.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  gherkin.rst  index.rst  install.rst  installation.rst  make.bat  modules.rst  programmers.rst  tutorial.rst  usage.rst  writers.rst
example/: README.rst  calculator.feature  calculator.py  test_acceptance.py  test_all.py  test_feature_as_str.py  test_unit.py
morelia/: README  __init__.py  config.py  decorators.py  exceptions.py  formatters.py  grammar.py  i18n.py  matchers.py  morelia.py  moreliai18n.py  parser.py  setup.py  utils.py  visitors.py
src/: __init__.py  morelia.py
src/morelia/: __init__.py  base.py  config.py  decorators.py  exceptions.py  formatters.py  grammar.py  i18n.py  matchers.py  parser.py  utils.py  visitors.py
tests/: morelia.feature  morelia.features  morelia_suite.py  test_acceptance.py  test_background.py  test_comments.py  test_config.py  test_decorators.py  test_docstrings.py  test_formatters.py  test_grammar.py  test_labels.py  test_matchers.py  test_parser.py  test_regression.py  test_scenarios.py  test_unit.py  test_visitors.py
tests/features/: background.feature  backgroundpl.feature  comments.feature  (+6 more)
(+25 files in other folders)
