[tool.poetry]
name = "Morelia"
version = "0.7.1"
description="for \"Behavior Driven Development\" (BDD) -- a client-facing scripting language to put the squeeze on all your features"
license="MIT"
authors = ["dryobates <jakub.stolarski@gmail.com>"]
readme="README.rst"
repository="https://github.com/kidosoft/morelia"
documentation="https://morelia.readthedocs.io/en/latest/"
keywords=["test", "bdd", "behavior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.5"
parse = "^1.8.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.7"
pytest-cov = "^2.6"
pytest-flake8 = "^1.0"
sphinx-rtd-theme = "^0.4.2"
pytest-black = { version = "^0.3.3", python = "^3.6" }
black = { version = "^18.9b0", python = "^3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
